Adionado castration, donation e sale. Atualizado e finalizado o swagger
