# models/user_model.py
@@ -1,10 +1,12 @@
 import uuid
 from sqlalchemy import Column, String, DateTime, Date
-from database.dateabase import Base
+from database.database import Base
 from sqlalchemy.dialects.postgresql import UUID  # Para o tipo UUID no PostgreSQL
 import uuid
 import datetime
 from passlib.hash import bcrypt  # Importando bcrypt corretamente do passlib
+from sqlalchemy.orm import relationship
+
 
 class UserModel(Base):
     __tablename__ = 'users'  # Certifique-se de que o nome da tabela está correto
@@ -14,9 +16,15 @@ class UserModel(Base):
     last_name = Column(String, index=True)
     email = Column(String, unique=True, index=True)
     date_of_birth = Column(Date)
-    date_created = Column(DateTime, default=datetime.datetime.utcnow)
-    date_last_updated = Column(DateTime, default=datetime.datetime.utcnow, onupdate=datetime.datetime.utcnow)
+    date_created = Column(DateTime, default=datetime.datetime.now(datetime.timezone.utc))
+    date_last_updated = Column(DateTime, default=datetime.datetime.now(datetime.timezone.utc), onupdate=datetime.datetime.now(datetime.timezone.utc))
     hashed_password = Column(String)
+
+
+    donations = relationship("DonationModel", back_populates="user")
+    sales = relationship("SaleModel", back_populates="user")
+    castrations = relationship("CastrationModel", back_populates="user")
+
 
     def verify_password(self, password: str):
         """
